--- a/src/components/weather/main/today_tomorrow_index/TodayTomorrowIndexTab.module.css
+++ b/src/components/weather/main/today_tomorrow_index/TodayTomorrowIndexTab.module.css
@@ -1,8 +1,9 @@
 .TodayTomorrowIndexTabRoot {
     display: flex;
+    margin-top: 10px;
 }
 
-.TodayTomorrowIndexTab {
+.TodayTomorrowIndexTabNotSelected {
     width: 50%;
     text-align: center;
     font-size: .9rem;
@@ -14,7 +15,16 @@
     padding-bottom: 10px;
 }
 
-.TodayTomorrowIndexTab em {
+.TodayTomorrowIndexTabNotSelected:hover {
+    cursor: pointer;
+    color: #c1132e;
+}
+
+.TodayTomorrowIndexTabNotSelected:nth-of-type(n + 2) {
+    border-right: solid 1px #ccc;
+}
+
+.TodayTomorrowIndexTabNotSelected em {
     font-style: normal;
 }
 
@@ -25,24 +35,26 @@
     font-weight: 700;
     color: #333;
     background-color: #fff;
-    border-top: solid 5px #0a38e4;
+    border-top: solid 5px #5089ff;
     border-left: solid 1px #ccc;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+.TodayTomorrowIndexTabSelected:hover {
+    cursor: pointer;
 }
 
 .TodayTomorrowIndexTabSelected em {
     font-style: normal;
 }
 
-em.TodayTomorrowIndexTabSat {
+.TodayTomorrowIndexTabNotSelected em.DayOfWeekSat,
+.TodayTomorrowIndexTabSelected em.DayOfWeekSat {
     color: #0a38e4;
 }
 
-em.TodayTomorrowIndexTabSun {
+.TodayTomorrowIndexTabNotSelected em.DayOfWeekSun,
+.TodayTomorrowIndexTabSelected em.DayOfWeekSun {
     color: #c1132e;
-}
-
-.TodayTomorrowIndexTab:nth-of-type(n + 2) {
-    border-right: solid 1px #ccc;
 }
