・天気のサブタイトルのコンポーネントを追加する。 ・一日の天気のコンポーネントと共通機能の名前を修正する。 ・一日の天気のコンポーネント用の警報/注意報のコンポーネントを汎用コンポーネントとする。 ・市町村の天気のコンポーネントに、一日の天気（今日）と警報・注意報を表示する。 ・市町村の天気のテストデータ構成を修正する。

--- a/src/components/weather/common/WeatherSubTitle.module.css
+++ b/src/components/weather/common/WeatherSubTitle.module.css
@@ -1,4 +1,4 @@
-.PinPointWeatherTitle {
+.WeatherSubTitle {
     display: flex;
     align-items: center;
     margin-top: 5px;
@@ -7,11 +7,11 @@
     color: #333;
 }
 
-.PinPointWeatherTitleSubject {
+.WeatherSubTitleSubject {
     font-weight: 700;
 }
 
-.PinPointWeatherTitleDate {
+.WeatherSubTitleDate {
     margin-left: 5px;
     font-size: 90%;
 }
